--- a/public/hrd/schedule-admin.html
+++ b/public/hrd/schedule-admin.html
@@ -318,6 +318,7 @@
             <thead>
               <tr>
                 <th>Name</th>
+                <th>Employee ID</th>
                 <th>Dept</th>
                 <th>Syllabus %</th>
                 <th>Last Update</th>
@@ -423,7 +424,7 @@
 
     function buildRow(t) {
       const tr = document.createElement('tr')
-      tr.innerHTML = `<td>${t.name}</td><td>${t.dept}</td><td>${t.pct}%</td><td>${t.updated}</td><td class="actions"><button class="ghost viewProfile" data-id="${t.id}">Profile</button><button class="ghost" data-action="flag" data-id="${t.id}">Flag</button></td>`
+      tr.innerHTML = `<td>${t.name}</td><td>${t.empId || '—'}</td><td>${t.dept}</td><td>${t.pct}%</td><td>${t.updated}</td><td class="actions"><button class="ghost viewProfile" data-id="${t.id}">Profile</button><button class="ghost" data-action="flag" data-id="${t.id}">Flag</button></td>`
       return tr
     }
 
@@ -458,7 +459,7 @@
         const id = Number(vp.dataset.id)
         try {
           const t = await API.getTeacher(id)
-          openModal(`<div><div style="display:flex;justify-content:space-between;align-items:center"><h3>${t.name}</h3><button class="ghost" id="closeModal">Close</button></div><div style="margin-top:8px"><div class="muted">Department</div><div style="font-weight:700">${t.dept}</div></div><div style="margin-top:8px"><div class="muted">Syllabus Completion</div><div style="font-weight:700">${t.pct}%</div></div><div style="margin-top:8px"><div class="muted">Last Update</div><div style="font-weight:700">${t.updated}</div></div><div style="margin-top:8px"><div class="muted">Courses</div><div>${(t.courses || []).map(c => `<span class="pill">${c}</span>`).join(' ')}</div></div></div>`)
+          openModal(`<div><div style="display:flex;justify-content:space-between;align-items:center"><h3>${t.name}</h3><button class="ghost" id="closeModal">Close</button></div><div style="margin-top:8px"><div class="muted">Employee ID</div><div style="font-weight:700">${t.empId || '—'}</div></div><div style="margin-top:8px"><div class="muted">Department</div><div style="font-weight:700">${t.dept}</div></div><div style="margin-top:8px"><div class="muted">Syllabus Completion</div><div style="font-weight:700">${t.pct}%</div></div><div style="margin-top:8px"><div class="muted">Last Update</div><div style="font-weight:700">${t.updated}</div></div><div style="margin-top:8px"><div class="muted">Courses</div><div>${(t.courses || []).map(c => `<span class="pill">${c}</span>`).join(' ')}</div></div></div>`)
         } catch (err) { alert('Could not fetch teacher') }
         return
       }
@@ -485,7 +486,7 @@
     })
 
     function scheduleFormHtml(existing) {
-      const teachersOptions = sampleTeachers.map(t => `<option value="${t.id}" ${existing && existing.teacherId === t.id ? 'selected' : ''}>${t.name} — ${t.dept}</option>`).join('')
+      const teachersOptions = sampleTeachers.map(t => `<option value="${t.id}" ${existing && existing.teacherId === t.id ? 'selected' : ''}>${t.name} (${t.empId || 'N/A'}) — ${t.dept}</option>`).join('')
       return `<div><div style="display:flex;justify-content:space-between;align-items:center"><h3>${existing ? 'Edit Schedule' : 'New Schedule'}</h3><button class="ghost" id="closeModal">Close</button></div><label>Teacher</label><select id="schedTeacher">${teachersOptions}</select><label>Course</label><input id="schedCourse" value="${existing ? existing.course : ''}" /><div class="row"><div style="flex:1"><label>Date</label><input id="schedDate" type="date" value="${existing ? existing.date : ''}" /></div><div style="width:140px"><label>Time</label><input id="schedTime" value="${existing ? existing.time : ''}" placeholder="09:00-10:00" /></div></div><label>Room</label><input id="schedRoom" value="${existing ? existing.room : ''}" /><div style="display:flex;gap:8px;justify-content:flex-end;margin-top:12px"><button class="ghost" id="cancelSched">Cancel</button><button class="btn" id="saveSched" data-id="${existing ? existing.id : ''}">Save</button></div></div>`
     }
 
@@ -525,7 +526,7 @@
 
     document.getElementById('exportCsv').addEventListener('click', async () => {
       if (!sampleTeachers || sampleTeachers.length === 0) { alert('No teacher data to export'); return }
-      const rows = [['Name', 'Dept', 'Syllabus %', 'Last Update'], ...sampleTeachers.map(t => [t.name, t.dept, t.pct, t.updated])]
+      const rows = [['Name', 'Employee ID', 'Dept', 'Syllabus %', 'Last Update'], ...sampleTeachers.map(t => [t.name, t.empId || '', t.dept, t.pct, t.updated])]
       const csv = rows.map(r => r.map(c => `\"${String(c).replace(/\"/g, '\"\"')}\"`).join(',')).join('\n')
       const blob = new Blob([csv], { type: 'text/csv' })
       const url = URL.createObjectURL(blob)
@@ -751,7 +752,7 @@
       // Populate teacher dropdown for extracurricular
       const teacherSelect = document.getElementById('teacherSelectExtracurricular')
       teacherSelect.innerHTML = '<option value="">Select a teacher...</option>' +
-        sampleTeachers.map(t => `<option value="${t.id}">${t.name} — ${t.dept}</option>`).join('')
+        sampleTeachers.map(t => `<option value="${t.id}">${t.name} (${t.empId || 'N/A'}) — ${t.dept}</option>`).join('')
     }
 
     init()
