--- a/public/teachers/schedule.html
+++ b/public/teachers/schedule.html
@@ -1,134 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Department Schedule — SNPSU HRD</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Department Schedule — SNPSU HRD</title>
 
-<style>
-:root{--bg:#f6fbff;--card:#fff;--accent:#0b63d6;--muted:#6b7280;--glass:rgba(11,99,214,0.06)}
-*{box-sizing:border-box;font-family:Inter,system-ui,Segoe UI,Roboto,Arial}
-body{margin:0;background:var(--bg);padding:20px;display:flex;justify-content:center;min-height:100vh}
-.wrap{width:100%;max-width:920px}
-.header{display:flex;justify-content:space-between;align-items:center;margin-bottom:16px}
-.h1{font-weight:800;font-size:20px;color:var(--accent)}
-.sub{color:var(--muted);font-size:13px}
+  <style>
+    :root {
+      --bg: #f6fbff;
+      --card: #fff;
+      --accent: #0b63d6;
+      --muted: #6b7280;
+      --glass: rgba(11, 99, 214, 0.06)
+    }
 
-.btn{padding:10px 14px;border-radius:10px;border:0;background:var(--accent);color:#fff;font-weight:700;cursor:pointer}
-.ghost{background:#fff;border:1px solid #e6eefb;color:var(--accent)}
+    * {
+      box-sizing: border-box;
+      font-family: Inter, system-ui, Segoe UI, Roboto, Arial
+    }
 
-.card{background:var(--card);padding:18px;border-radius:12px;box-shadow:0 8px 30px var(--glass);margin-bottom:14px}
-.item{border-bottom:1px solid #eef6ff;padding:12px 0}
-.row{display:flex;justify-content:space-between;align-items:center}
-.title{font-weight:700;color:#1f2937}
-.meta{color:var(--muted);font-size:13px;margin-top:4px}
-.empty{text-align:center;color:var(--muted);padding:20px}
-.tag{font-size:12px;font-weight:700;padding:4px 8px;border-radius:8px;background:#eef6ff;color:var(--accent)}
+    body {
+      margin: 0;
+      background: var(--bg);
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      min-height: 100vh
+    }
 
-.upcomingItem{padding:10px;border-radius:10px;background:#fff;border:1px solid #eef6ff;margin-bottom:10px}
-</style>
+    .wrap {
+      width: 100%;
+      max-width: 920px
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 16px
+    }
+
+    .h1 {
+      font-weight: 800;
+      font-size: 20px;
+      color: var(--accent)
+    }
+
+    .sub {
+      color: var(--muted);
+      font-size: 13px
+    }
+
+    .btn {
+      padding: 10px 14px;
+      border-radius: 10px;
+      border: 0;
+      background: var(--accent);
+      color: #fff;
+      font-weight: 700;
+      cursor: pointer
+    }
+
+    .ghost {
+      background: #fff;
+      border: 1px solid #e6eefb;
+      color: var(--accent)
+    }
+
+    .card {
+      background: var(--card);
+      padding: 18px;
+      border-radius: 12px;
+      box-shadow: 0 8px 30px var(--glass);
+      margin-bottom: 14px
+    }
+
+    .item {
+      border-bottom: 1px solid #eef6ff;
+      padding: 12px 0
+    }
+
+    .row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center
+    }
+
+    .title {
+      font-weight: 700;
+      color: #1f2937
+    }
+
+    .meta {
+      color: var(--muted);
+      font-size: 13px;
+      margin-top: 4px
+    }
+
+    .empty {
+      text-align: center;
+      color: var(--muted);
+      padding: 20px
+    }
+
+    .tag {
+      font-size: 12px;
+      font-weight: 700;
+      padding: 4px 8px;
+      border-radius: 8px;
+      background: #eef6ff;
+      color: var(--accent)
+    }
+
+    .upcomingItem {
+      padding: 10px;
+      border-radius: 10px;
+      background: #fff;
+      border: 1px solid #eef6ff;
+      margin-bottom: 10px
+    }
+  </style>
 </head>
 
 <body>
-<div class="wrap">
+  <div class="wrap">
 
-  <div class="header">
-    <div>
-      <div class="h1">Department Schedule</div>
-      <div class="sub">View only · Updated by Admin/HOD</div>
+    <div class="header">
+      <div>
+        <div class="h1">Department Schedule</div>
+        <div class="sub">View only · Updated by Admin/HOD</div>
+      </div>
+
+      <div style="display:flex;gap:10px">
+        <button class="btn ghost" id="backBtn">Back</button>
+        <button class="btn" id="logoutBtn">Logout</button>
+      </div>
     </div>
 
-    <div style="display:flex;gap:10px">
-      <button class="btn ghost" id="backBtn">Back</button>
-      <button class="btn" id="logoutBtn">Logout</button>
+    <div class="card">
+      <div style="font-weight:700;margin-bottom:10px">Upcoming</div>
+      <div id="upcoming"></div>
     </div>
+
+    <div class="card">
+      <div style="font-weight:700;margin-bottom:10px">Full Schedule</div>
+      <div id="scheduleList"></div>
+    </div>
+
   </div>
 
-  <div class="card">
-    <div style="font-weight:700;margin-bottom:10px">Upcoming</div>
-    <div id="upcoming"></div>
-  </div>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
 
-  <div class="card">
-    <div style="font-weight:700;margin-bottom:10px">Full Schedule</div>
-    <div id="scheduleList"></div>
-  </div>
+      function getLogged() {
+        try { return JSON.parse(localStorage.getItem("loggedInTeacher") || "null") } catch (e) { return null }
+      }
 
-</div>
+      const user = getLogged()
+      if (!user) location.href = "./login.html"
 
-<script>
-document.addEventListener("DOMContentLoaded", () => {
+      async function loadSchedule() {
+        try {
+          const res = await fetch('/api/schedules')
+          if (!res.ok) throw new Error('failed')
+          return await res.json()
+        } catch (e) {
+          console.warn('Using local schedule fallback')
+          try { return JSON.parse(localStorage.getItem("dept_schedule") || "[]") } catch (e) { return [] }
+        }
+      }
 
-  function getLogged(){
-    try{return JSON.parse(localStorage.getItem("loggedInTeacher")||"null")}catch(e){return null}
-  }
+      const backBtn = document.getElementById("backBtn")
+      const logoutBtn = document.getElementById("logoutBtn")
+      const scheduleList = document.getElementById("scheduleList")
+      const upcomingBox = document.getElementById("upcoming")
 
-  const user = getLogged()
-  if(!user) location.href="./login.html"
+      backBtn.addEventListener("click", () => location.href = "./dashboard.html")
+      logoutBtn.addEventListener("click", () => {
+        localStorage.removeItem("loggedInTeacher")
+        location.href = "./login.html"
+      })
 
-  function loadSchedule(){
-    try{return JSON.parse(localStorage.getItem("dept_schedule")||"[]")}catch(e){return []}
-  }
+      async function render() {
+        const list = await loadSchedule()
+        if (!Array.isArray(list) || list.length === 0) {
+          scheduleList.innerHTML = '<div class="empty">No schedule added yet</div>'
+          upcomingBox.innerHTML = '<div class="empty">Nothing upcoming</div>'
+          return
+        }
 
-  const backBtn = document.getElementById("backBtn")
-  const logoutBtn = document.getElementById("logoutBtn")
-  const scheduleList = document.getElementById("scheduleList")
-  const upcomingBox = document.getElementById("upcoming")
+        list.sort((a, b) => (a.date || "").localeCompare(b.date || ""))
 
-  backBtn.addEventListener("click",()=> location.href="./dashboard.html")
-  logoutBtn.addEventListener("click",()=>{ 
-    localStorage.removeItem("loggedInTeacher")
-    location.href="./login.html"
-  })
+        const today = new Date().toISOString().slice(0, 10)
+        const upcoming = list.filter(item => item.date >= today).slice(0, 5)
 
-  function render(){
-    const list = loadSchedule()
-    if(!Array.isArray(list) || list.length === 0){
-      scheduleList.innerHTML = '<div class="empty">No schedule added yet</div>'
-      upcomingBox.innerHTML = '<div class="empty">Nothing upcoming</div>'
-      return
-    }
+        upcomingBox.innerHTML = upcoming.length === 0
+          ? '<div class="empty">Nothing upcoming</div>'
+          : ""
 
-    list.sort((a,b)=> (a.date||"").localeCompare(b.date||""))
-
-    const today = new Date().toISOString().slice(0,10)
-    const upcoming = list.filter(item => item.date >= today).slice(0,5)
-
-    upcomingBox.innerHTML = upcoming.length === 0
-      ? '<div class="empty">Nothing upcoming</div>'
-      : ""
-
-    upcoming.forEach(item=>{
-      const div = document.createElement("div")
-      div.className = "upcomingItem"
-      div.innerHTML = `
+        upcoming.forEach(item => {
+          const div = document.createElement("div")
+          div.className = "upcomingItem"
+          div.innerHTML = `
         <div class="row">
-          <div class="title">${item.title}</div>
+          <div class="title">${item.course}</div>
           <div class="tag">${item.date}</div>
         </div>
-        <div class="meta">${item.time || "—"} · ${item.venue || "—"}</div>
+        <div class="meta">${item.time || "—"} · ${item.room || "—"}</div>
       `
-      upcomingBox.appendChild(div)
-    })
+          upcomingBox.appendChild(div)
+        })
 
-    scheduleList.innerHTML = ""
-    list.forEach(item=>{
-      const div = document.createElement("div")
-      div.className="item"
-      div.innerHTML = `
+        scheduleList.innerHTML = ""
+        list.forEach(item => {
+          const div = document.createElement("div")
+          div.className = "item"
+          div.innerHTML = `
         <div class="row">
-          <div class="title">${item.title}</div>
+          <div class="title">${item.course}</div>
           <div class="tag">${item.date}</div>
         </div>
-        <div class="meta">${item.time || "—"} · ${item.venue || "—"}</div>
+        <div class="meta">${item.time || "—"} · ${item.room || "—"}</div>
       `
-      scheduleList.appendChild(div)
-    })
-  }
+          scheduleList.appendChild(div)
+        })
+      }
 
-  render()
-})
-</script>
+      render()
+    })
+  </script>
 
 </body>
+
 </html>
